# cis5370_openclaw_audit

./: EXPERIMENT_GUIDE.md  README.md  pyproject.toml
openclaw_audit/: .gitignore  DEMO_GUIDE.md  __init__.py  __main__.py  discovery.py  loaders.py  models.py  scanner.py
openclaw_audit/openclaw_audit/: cli.py  config.py  correlators.py  risk.py
openclaw_audit/openclaw_audit/parsers/: __init__.py  json_parser.py  toml_parser.py  yaml_parser.py
openclaw_audit/openclaw_audit/reporting/: csv_reporter.py  json_reporter.py
openclaw_audit/openclaw_audit/rules/: base.py  execution_rules.py  network_rules.py  workspace_rules.py
openclaw_audit/openclaw_audit/utils/: __init__.py  filesystem.py  logging.py
openclaw_audit/parsers/: text_parser.py
openclaw_audit/reporting/: __init__.py  console_reporter.py  mermaid_reporter.py
openclaw_audit/rule_data/: default_rules.yaml
openclaw_audit/rules/: __init__.py  auth_rules.py  node_rules.py  plugin_rules.py  secret_rules.py
openclaw_audit/tests/: test_correlators.py  test_rules_execution.py  test_rules_workspace.py
openclaw_audit/utils/: patterns.py
tests/: test_parsers.py  test_risk.py  test_rules_auth.py  test_rules_network.py  test_rules_node.py  test_rules_plugin.py  test_rules_secrets.py  test_scan_integration.py
tests/fixtures/: docker-compose.yml  malformed.json  sample.env  sample_code.py  sample_config.json  sample_config.toml  sample_config.yaml
