# ---------------------------------------------------------------------------
# pyproject.toml — Single-file project configuration for openclaw-audit
#
# This file replaces setup.py, setup.cfg, and most tool-specific config
# files.  It declares package metadata, dependencies, CLI entry-points,
# and tool settings for ruff, pytest, and mypy.
# ---------------------------------------------------------------------------

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"


# ── Package metadata ──────────────────────────────────────────────────────

[project]
name = "openclaw-audit"
version = "0.1.0"
description = "Static security audit CLI for OpenClaw orchestration framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "CIS 5370 Final Project Team"},
]
keywords = ["security", "audit", "static-analysis", "openclaw"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.0",
]


# ── Console script entry-point ────────────────────────────────────────────
# After `pip install -e .` users can run:
#     openclaw-audit scan /path/to/repo

[project.scripts]
openclaw-audit = "openclaw_audit.cli:app"


# ── Setuptools package discovery ──────────────────────────────────────────

[tool.setuptools.packages.find]
include = ["openclaw_audit*"]


# ── Ruff — linter & formatter ─────────────────────────────────────────────

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line-too-long — handled by formatter
]


# ── Pytest ────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]


# ── Mypy — static type checker ────────────────────────────────────────────

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
